- use correct SINGLE download dialog in BookmarkWindowController - refactor and cleanup